# versioned-fastapi

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
examples/: customization.py  mounts.py  root_path.py  simple.py
scripts/: check_version.sh  replace_relative_md_links.py
tests/: conftest.py
tests/test_customization_example/: openapi_definitions.json  test_customization.py
tests/test_mounts_example.py/: openapi_definitions.json  test_mounts.py
tests/test_simple_example/: openapi_definitions.json  test_simple.py
versioned_fastapi/: __init__.py  version_fastapi.py
